#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([KernelProgram], [1.0], [pjha.2908@gmail.com])
AC_CONFIG_SRCDIR([kfifo_dynamic_1/kfifo_dynamic_1.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([idr_demo/Makefile
                 kfifo_dynamic_1/Makefile
                 kfifo_dynamic_2/Makefile
                 kfifo_static_1/Makefile
                 kfifo_static_2/Makefile
                 list_1/Makefile
                 list_2/Makefile
                 rb_tree/Makefile])
AC_OUTPUT
